# syclfire

./: .gitignore  CMakeLists.txt  LICENSE  README.md  accel_sycl.cpp  accel_sycl.hpp  fire.cpp  fire.hpp  main.cpp
pdcurses/pdcurses/: initscr.c
pdcurses/wincon/: pdcscrn.c
